@@ -1,5 +1,6 @@
 package org.hyperledger.iroha.android.model.instructions;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -7,16 +8,17 @@ import java.util.Objects;
 /**
  * Typed builder for {@code ProposeDeployContract} instructions.
  *
- * <p>Captures the governance namespace, contract identifiers, deterministic code/ABI hashes, and
- * optional enactment window + voting mode overrides. The builder emits canonical Norito arguments
- * so that Kotlin/Java clients match the Rust data model expectations.
+ * <p>Captures exactly one target selector ({@code contract_address} or {@code contract_alias}),
+ * deterministic code/ABI hashes, and optional enactment window + voting mode overrides. The
+ * builder emits canonical Norito arguments so that Android clients match the Rust data model
+ * expectations.
  */
 public final class ProposeDeployContractInstruction implements InstructionTemplate {
 
   private static final String ACTION = "ProposeDeployContract";
 
-  private final String namespace;
-  private final String contractId;
+  private final String contractAddress;
+  private final String contractAlias;
   private final String codeHashHex;
   private final String abiHashHex;
   private final String abiVersion;
@@ -30,22 +32,23 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
 
   private ProposeDeployContractInstruction(
       final Builder builder, final Map<String, String> argumentOrder) {
-    this.namespace = builder.namespace;
-    this.contractId = builder.contractId;
+    this.contractAddress = builder.contractAddress;
+    this.contractAlias = builder.contractAlias;
     this.codeHashHex = builder.codeHashHex;
     this.abiHashHex = builder.abiHashHex;
     this.abiVersion = builder.abiVersion;
     this.window = builder.window;
     this.votingMode = builder.votingMode;
-    this.arguments = Map.copyOf(argumentOrder);
+    this.arguments =
+        Collections.unmodifiableMap(new LinkedHashMap<>(Objects.requireNonNull(argumentOrder)));
   }
 
-  public String namespace() {
-    return namespace;
+  public String contractAddress() {
+    return contractAddress;
   }
 
-  public String contractId() {
-    return contractId;
+  public String contractAlias() {
+    return contractAlias;
   }
 
   public String codeHashHex() {
@@ -84,13 +87,23 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
 
   public static ProposeDeployContractInstruction fromArguments(
       final Map<String, String> arguments) {
+    final String contractAddress = blankToNull(arguments.get("contract_address"));
+    final String contractAlias = blankToNull(arguments.get("contract_alias"));
+    if ((contractAddress == null) == (contractAlias == null)) {
+      throw new IllegalArgumentException(
+          "Instruction arguments must include exactly one of contract_address or contract_alias");
+    }
+
     final Builder builder =
         builder()
-            .setNamespace(require(arguments, "namespace"))
-            .setContractId(require(arguments, "contract_id"))
             .setCodeHashHex(require(arguments, "code_hash_hex"))
             .setAbiHashHex(require(arguments, "abi_hash_hex"))
             .setAbiVersion(require(arguments, "abi_version"));
+    if (contractAddress != null) {
+      builder.setContractAddress(contractAddress);
+    } else {
+      builder.setContractAlias(contractAlias);
+    }
     if (arguments.containsKey("mode")) {
       builder.setVotingMode(
           GovernanceInstructionUtils.VotingMode.parse(require(arguments, "mode")));
@@ -103,11 +116,19 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
   }
 
   private static String require(final Map<String, String> arguments, final String key) {
-    final String value = arguments.get(key);
-    if (value == null || value.isBlank()) {
+    final String value = blankToNull(arguments.get(key));
+    if (value == null) {
       throw new IllegalArgumentException("Instruction argument '" + key + "' is required");
     }
     return value;
+  }
+
+  private static String blankToNull(final String value) {
+    if (value == null) {
+      return null;
+    }
+    final String trimmed = value.trim();
+    return trimmed.isEmpty() ? null : trimmed;
   }
 
   @Override
@@ -118,8 +139,8 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
     if (!(obj instanceof ProposeDeployContractInstruction other)) {
       return false;
     }
-    return Objects.equals(namespace, other.namespace)
-        && Objects.equals(contractId, other.contractId)
+    return Objects.equals(contractAddress, other.contractAddress)
+        && Objects.equals(contractAlias, other.contractAlias)
         && Objects.equals(codeHashHex, other.codeHashHex)
         && Objects.equals(abiHashHex, other.abiHashHex)
         && Objects.equals(abiVersion, other.abiVersion)
@@ -130,12 +151,12 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
   @Override
   public int hashCode() {
     return Objects.hash(
-        namespace, contractId, codeHashHex, abiHashHex, abiVersion, window, votingMode);
+        contractAddress, contractAlias, codeHashHex, abiHashHex, abiVersion, window, votingMode);
   }
 
   public static final class Builder {
-    private String namespace;
-    private String contractId;
+    private String contractAddress;
+    private String contractAlias;
     private String codeHashHex;
     private String abiHashHex;
     private String abiVersion;
@@ -144,19 +165,13 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
 
     private Builder() {}
 
-    public Builder setNamespace(final String namespace) {
-      if (namespace == null || namespace.isBlank()) {
-        throw new IllegalArgumentException("namespace must not be blank");
-      }
-      this.namespace = namespace;
+    public Builder setContractAddress(final String contractAddress) {
+      this.contractAddress = requireNonBlank(contractAddress, "contractAddress");
       return this;
     }
 
-    public Builder setContractId(final String contractId) {
-      if (contractId == null || contractId.isBlank()) {
-        throw new IllegalArgumentException("contractId must not be blank");
-      }
-      this.contractId = contractId;
+    public Builder setContractAlias(final String contractAlias) {
+      this.contractAlias = requireNonBlank(contractAlias, "contractAlias");
       return this;
     }
 
@@ -172,10 +187,7 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
     }
 
     public Builder setAbiVersion(final String abiVersion) {
-      if (abiVersion == null || abiVersion.isBlank()) {
-        throw new IllegalArgumentException("abiVersion must not be blank");
-      }
-      this.abiVersion = abiVersion;
+      this.abiVersion = requireNonBlank(abiVersion, "abiVersion");
       return this;
     }
 
@@ -190,11 +202,11 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
     }
 
     public ProposeDeployContractInstruction build() {
-      if (namespace == null) {
-        throw new IllegalStateException("namespace must be provided");
-      }
-      if (contractId == null) {
-        throw new IllegalStateException("contractId must be provided");
+      final boolean hasContractAddress = contractAddress != null;
+      final boolean hasContractAlias = contractAlias != null;
+      if (hasContractAddress == hasContractAlias) {
+        throw new IllegalStateException(
+            "Exactly one of contractAddress or contractAlias must be provided");
       }
       if (codeHashHex == null) {
         throw new IllegalStateException("codeHashHex must be provided");
@@ -211,8 +223,11 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
     private Map<String, String> canonicalArguments() {
       final Map<String, String> args = new LinkedHashMap<>();
       args.put("action", ACTION);
-      args.put("namespace", namespace);
-      args.put("contract_id", contractId);
+      if (contractAddress != null) {
+        args.put("contract_address", contractAddress);
+      } else {
+        args.put("contract_alias", contractAlias);
+      }
       args.put("code_hash_hex", codeHashHex);
       args.put("abi_hash_hex", abiHashHex);
       args.put("abi_version", abiVersion);
@@ -223,6 +238,13 @@ public final class ProposeDeployContractInstruction implements InstructionTempla
         args.put("mode", votingMode.wireValue());
       }
       return args;
+    }
+
+    private static String requireNonBlank(final String value, final String field) {
+      if (value == null || value.isBlank()) {
+        throw new IllegalArgumentException(field + " must not be blank");
+      }
+      return value;
     }
   }
 }
